0.9.4 StorageLooter Module Added! Many fixes too
- Added the **StorageLooter** module which automatically steals stuff from storage containers according to itemlists and a list of values that are set for amounts of those items to take. It either automatically opens the containers within reach and steals the stuff automatically, or steals the stuff automatically when you manually open the container.
- Fixed **InstaMineNuker** crashing the game and/or kicking you from the server due to a bug.
- Added a "blacklist" and "whitelist" mode for the item list setting in **SuperInstaMine**
- Fixed the crash caused by the custom Trouser-Streak random splash text being called.
- Cleaned up the code in **NbtEditor** to make it less complicated and silly.
- Re-Added "item" mode to **NbtEditor** for Minecraft 1.20.6, I got the illegal enchants working. The 1.20.4 version still has item mode.
- Fixed where the blockpos should be calculated for TickExploit in **NewerNewChunks**.
- Also confirmed TickExploit was actually just watching BlockUpdate packets so the option has been renamed to "BlockUpdateExploit" in **NewerNewChunks**.